# parakeet-rs

./: Cargo.toml  README.md
examples/: diarization.rs  raw.rs  transcribe.rs
src/: audio.rs  config.rs  parakeet.rs  parakeet_tdt.rs  sortformer.rs  transcriber.rs
